# OpenGLCalculator

./: .gitignore  CMakeLists.txt  README.md  button.pvr  roboto.json  roboto.pvr  ui.frag  ui.vert
Calculator/: main.cpp
Calculator/Core/: CalculatorFunctions.cpp  CalculatorFunctions.h  Processor.cpp  Processor.h  Window.cpp  Window.h
Calculator/Core/Graphics/: GL.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h
Calculator/Core/Utility/: Array.h  Binary.h  Input.cpp  Input.h  Macro.h  Math.h  UIBuilder.cpp  UIBuilder.h
CalculatorTests/: ButtonFactoryTests.cpp  CMakeLists.txt  CalculatorProcessorTests.cpp
